# CargoWorkspace

./: README.md
ListenerAndStream/: Readme.md
ListenerAndStream/listener/src/: main.rs
ListenerAndStream/stream/src/: main.rs
bf4_recoil_reduce/: Cargo.toml
bf4_recoil_reduce/src/: main.rs
bf4_recoil_reduce_syscalls/: Cargo.toml
bf4_recoil_reduce_syscalls/src/: main.rs
bootloader_output/: Cargo.toml
bootloader_output/src/: main.rs  screen.rs  system.rs
clang_test/: Cargo.toml
clang_test/src/: main.rs
clang_test/test_files/: test.cpp
discord/: Cargo.toml
discord/src/: main.rs
dll/: Cargo.toml
elf_info/: Cargo.toml
elf_info/macros/src/: lib.rs
elf_info/src/: elf_info.rs  elf_object.rs  main.rs
freestanding_messagebox/: Cargo.toml  README.md
freestanding_messagebox/src/: main.rs
freestanding_print/: Cargo.toml
freestanding_print/src/: main.rs
game_test/: Cargo.toml
game_test/src/: debug.rs  main.rs  map.rs
macro_test/: Cargo.toml
macro_test/macros/src/: lib.rs
macro_test/src/: main.rs
module_test/src/: main.rs  person.rs  util.rs
no_std_and_main/: Cargo.toml
no_std_and_main/src/: main.rs
piano_tile_clicker/: Cargo.toml
piano_tile_clicker/src/: colour.rs  main.rs
small_string/: Cargo.toml  compiled_with.txt
small_string/src/: main.rs
