[package]
name = "piano_tile_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
enigo = "0.0.14"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
